Fixed multi-part issue and made logic even more readable

--- a/view/css/study.scss
+++ b/view/css/study.scss
@@ -58,7 +58,7 @@ p {
 }
 
 .card #correct-label {
-    font-weight: 500;
+    font-weight: 200;
     color: #81DD00;
     display: none;
 }
